--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,5 +8,11 @@ html
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
-  body
-    = yield
+  body.d-flex.flex-column.h-100
+    = render 'layouts/shared/nav'
+    .container.my-4
+      .my-2
+        = render_flash_messages
+      main
+        .row
+          = yield
