--- a/app/views/layouts/shared/_nav.html.slim
+++ b/app/views/layouts/shared/_nav.html.slim
@@ -1,12 +1,20 @@
 .container.mb-2
   .d-flex.flex-wrap.align-items-center.py-2.border-bottom
     .navbar.navbar-expand-md.navbar-light.me-auto
-
+      .collapse.navbar-collapse
+        ul.nav.nav-pills.flex-grow-1.navbar-nav.me-auto
+          li.nav-item.me-2
+            = link_to t('.home'), root_path, class: 'nav-link text-dark'
+          - if signed_in?
+            li.nav-item.me-2
+              = link_to t('.repositories'), repositories_path, class: 'nav-link text-dark'
     ul.nav.nav-pills
+      - if signed_in?
+        li.nav-link.nav-item.text-secondary = current_user.email
       li.nav-item.me-2
         - if signed_in?
-          = link_to t('.sign_out'), sign_out_path, method: :delete
+          = link_to t('.sign_out'), sign_out_path, method: :delete, class: 'nav-link link-dark'
         - else
-          = link_to auth_request_path(:github), method: :post do
+          = link_to auth_request_path(:github), method: :post, class: 'nav-link link-dark' do
             span.me-2 = t('.sign_in')
             i.fa-brands.fa-github
