feature: adds check process

--- a/app/views/web/repositories/index.html.slim
+++ b/app/views/web/repositories/index.html.slim
@@ -13,4 +13,4 @@
         tr
           td = link_to repository.name, repository_path(repository)
           td = repository.language
-          td
+          td = last_check_status(repository)
