feat: adds repository page with loader service

--- a/app/views/web/repositories/show.html.slim
+++ b/app/views/web/repositories/show.html.slim
@@ -14,3 +14,20 @@
   p
     strong.me-2 = t('.updated_at')
     span = l @repository.updated_at
+  hr
+  table.table.table-striped.table-hover.mt-4
+    thead
+      tr
+        th
+        th = t('.state')
+        th = t('.reference')
+        th = t('.check_state')
+        th = t('.created_at')
+    tbody
+      - @repository.checks.each do |check|
+        tr
+          td = link_to check.id, repository_check_path(check)
+          td = check.aasm.human_state
+          td = commit_link(check)
+          td = check_status(check)
+          td = l check.created_at
