feature: adds test for check repository job

--- a/app/views/web/repositories/checks/show.html.slim
+++ b/app/views/web/repositories/checks/show.html.slim
@@ -29,4 +29,4 @@
           tr
             td = error["message"]
             td = error["ruleId"]
-            td = "#{error["line"]}:#{error["column"]}"
+            td = error["line"] ? "#{error["line"]}:#{error["column"]}" : ''
