--- a/app/views/web/repositories/_form.html.slim
+++ b/app/views/web/repositories/_form.html.slim
@@ -1,3 +1,5 @@
 = simple_form_for repository do |f|
-  = f.input :name, as: :select, collection: @user_repositories.map{|repo| repo[:full_name]}
+  = f.input :name, \
+    as: :select, \
+    collection: @user_repositories.pluck(:full_name)
   = f.button :submit, class: 'btn btn btn-success mt-3'
