--- a/app/views/web/repositories/show.html.slim
+++ b/app/views/web/repositories/show.html.slim
@@ -1,7 +1,10 @@
 .p-4.align-items-center.border.shadow.bg-white.rounded-3
   .mb-4
     h1 = @repository.name
-  = link_to t('.check'), repository_checks_path(@repository), method: :post, class: 'btn btn-primary mb-4'
+  = link_to t('.check'), \
+    repository_checks_path(@repository), \
+    method: :post, \
+    class: 'btn btn-primary mb-4'
   p
     strong.me-2 = t('.name')
     span = @repository.name
