--- a/app/views/user_mailer/check_failed_email.html.slim
+++ b/app/views/user_mailer/check_failed_email.html.slim
@@ -1,3 +1,3 @@
-h1 = t('.header', repository: @repository.name)
+h1 = t('.header', repository: @repository.full_name)
 p = t('.information')
 = link_to(t('.details'), repository_check_url(@repository.id, @check.id))
