--- a/app/views/web/repositories/show.html.slim
+++ b/app/views/web/repositories/show.html.slim
@@ -1,13 +1,13 @@
 .p-4.align-items-center.border.shadow.bg-white.rounded-3
   .mb-4
-    h1 = @repository.full_name
+    h1 = @repository.name
   = link_to t('.check'), \
     repository_checks_path(@repository), \
     method: :post, \
     class: 'btn btn-primary mb-4'
   p
     strong.me-2 = t('.name')
-    span = @repository.full_name
+    span = @repository.name
   p
     strong.me-2 = t('.language')
     span = @repository.language
