--- a/app/views/web/repositories/checks/show.html.slim
+++ b/app/views/web/repositories/checks/show.html.slim
@@ -16,7 +16,7 @@
         td = @check.passed
       tr
         td = t('.issues_count')
-        td = @issues.count
+        td = @issues_count
   table.table.table-hover.mb-5
     thead
       tr
